update post: Steps to Migrate Your Terraform State to Terraform Cloud.

--- a/cmahw6vl8000509l496yd02it.md
+++ b/cmahw6vl8000509l496yd02it.md
@@ -67,7 +67,7 @@ Before starting the migration, ensure you have the following prerequisites:
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1717782406824/d9b81a83-21db-4d56-832a-b99cd66f9597.png?auto=compress,format&format=webp align="left")
 
-**Step 3: Create a Resource group and Virtual Machine In Azure -** Create a VM in azure refer to link of my blog on how to create a Vm [**https://ladyintech.hashnode.dev/a-beginners-guide-to-creating-a-windows-11-pro-virtual-machine-in-azure**](https://ladyintech.hashnode.dev/a-beginners-guide-to-creating-a-windows-11-pro-virtual-machine-in-azure) - Create a new resource group and other resources
+**Step 3: Create a Resource group and Virtual Machine In Azure -** Create a VM in azure refer to the link below on how to create a Vm; [**https://ladyintech.hashnode.dev/a-beginners-guide-to-creating-a-windows-11-pro-virtual-machine-in-azure**](https://ladyintech.hashnode.dev/a-beginners-guide-to-creating-a-windows-11-pro-virtual-machine-in-azure) - Create a new resource group and other resources
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1717782704897/28ab4c17-1375-4ea4-b2b2-667fc02b5ecc.png?auto=compress,format&format=webp align="left")
 
@@ -79,7 +79,7 @@ Before starting the migration, ensure you have the following prerequisites:
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1717783757294/ce80cd2a-bab7-4766-bfba-7935de360a9d.png?auto=compress,format&format=webp align="left")
 
-**Step 4: Open VSC and Create Folder -** Click on "**File"** from the dropdown Select **"Open Folder"**
+**Step 4: Open VS-Code and Create Folder -** Click on "**File"** from the dropdown Select **"Open Folder"**
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1717784149178/ac280c27-d325-4b08-ab55-4551809f0702.jpeg?auto=compress,format&format=webp align="left")
 
